--- a/incidents.html
+++ b/incidents.html
@@ -1,7 +1,7 @@
 <html>
 <head> Common struggles of an Uncommon man</head>
 <body>
-
+<p>
 <b>Father’s first success comes at his son’s first failure:</b><br>
 
 In my first job I had developed a POC but on the previous day of demo it stopped working, I slogged all night and with no hope I returned one of many calls dad had made. With limited understanding of what I was saying he said; <i>"If this does not work, it’s not end of the world"</i> giving a small pause for me to pull my confidence, he continued, <i>"If it is still not working, you have not tried everything"</i> and he disconnected the call. The POC worked and demo did not happen – details some other time.<br>
@@ -17,6 +17,5 @@ At a marriage proposal, bride’s father disrespected my father, if it were anyb
 <b>Charm is unmissable:</b><br>
 
 While traveling to Paris, I had to face some hard questions during immigration as my passport was drenched. My father had similar problem so I feared how he will be able to handle it. But I saw him laughing along with the immigration officer and later told me they belong to same village which is in fact 50 kms apart. Similar incident happened where he got milk from a KFC store on the next morning of him landing in Paris with no money or understanding of the language.<br>
-<br>
-</body>
+  </p></body>
 </html>
