--- a/incidents.html
+++ b/incidents.html
@@ -1,8 +1,8 @@
 <html>
-<head> Common struggles of an Uncommon man</head>
+<head><center> Common struggles of an Uncommon man.</head>
 <body>
 <p>
-<b>Father’s first success comes at his son’s first failure:</b><br>
+<br><b>Father’s first success comes at his son’s first failure:</b><br>
 
 In my first job I had developed a POC but on the previous day of demo it stopped working, I slogged all night and with no hope I returned one of many calls dad had made. With limited understanding of what I was saying he said; <i>"If this does not work, it’s not end of the world"</i> giving a small pause for me to pull my confidence, he continued, <i>"If it is still not working, you have not tried everything"</i> and he disconnected the call. The POC worked and demo did not happen – details some other time.<br>
 
